--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,8 +22,9 @@ libipld-core = { version = "0.14.0", path = "core" }
 libipld-json = { version = "0.14.0", path = "dag-json", optional = true }
 libipld-macro = { version = "0.14.0", path = "macro" }
 libipld-pb = { version = "0.14.0", path = "dag-pb", optional = true }
+libipld-git = { version = "0.14.0", path = "dag-git", optional = true }
 log = "0.4.14"
-multihash = { version = "0.16.0", default-features = false, features = ["multihash-impl"] }
+multihash = { ssh = "ssh://git@gitlab.com:ColombaLink/dev/dapsi/public/dybli/core/deps/multihash.git"}
 parking_lot = "0.12.0"
 thiserror = "1.0.25"
 
@@ -32,13 +33,14 @@ async-std = { version = "1.9.0", features = ["attributes"] }
 criterion = "0.3.4"
 proptest = "1.0.0"
 model = "0.1.2"
-multihash = "0.16.0"
+multihash = { ssh = "ssh://git@gitlab.com:ColombaLink/dev/dapsi/public/dybli/core/deps/multihash.git"}
 
 [features]
-default = ["dag-cbor", "dag-json", "dag-pb", "derive"]
+default = ["dag-cbor", "dag-json", "dag-pb", "derive","dag-git"]
 dag-cbor = ["libipld-cbor"]
 dag-json = ["libipld-json"]
 dag-pb = ["libipld-pb"]
+dag-git = ["libipld-git"]
 derive = ["libipld-cbor-derive"]
 serde-codec = ["libipld-core/serde-codec"]
 
