--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ libipld-macro = { version = "0.14.0", path = "macro" }
 libipld-pb = { version = "0.14.0", path = "dag-pb", optional = true }
 libipld-git = { version = "0.14.0", path = "dag-git", optional = true }
 log = "0.4.14"
-multihash = { ssh = "ssh://git@gitlab.com:ColombaLink/dev/dapsi/public/dybli/core/deps/multihash.git"}
+multihash = "0.17.0"
 parking_lot = "0.12.0"
 thiserror = "1.0.25"
 
@@ -33,7 +33,7 @@ async-std = { version = "1.9.0", features = ["attributes"] }
 criterion = "0.3.4"
 proptest = "1.0.0"
 model = "0.1.2"
-multihash = { ssh = "ssh://git@gitlab.com:ColombaLink/dev/dapsi/public/dybli/core/deps/multihash.git"}
+multihash = "0.17.0"
 
 [features]
 default = ["dag-cbor", "dag-json", "dag-pb", "derive","dag-git"]
@@ -51,6 +51,7 @@ members = [
   "dag-cbor-derive",
   "dag-json",
   "dag-pb",
+  "dag-git",
   "macro",
   "dag-cbor-derive/examples/renamed-package",
 ]
@@ -65,3 +66,6 @@ harness = false
 [[bench]]
 name = "store"
 harness = false
+
+[patch.crates-io]
+multihash = { git = "https://github.com/timoCasti/multihash.git"}
