--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ libipld-macro = { version = "0.14.0", path = "macro" }
 libipld-pb = { version = "0.14.0", path = "dag-pb", optional = true }
 libipld-git = { version = "0.14.0", path = "dag-git", optional = true }
 log = "0.4.14"
-multihash  = { git = "https://github.com/timoCasti/multihash.git"}
+multihash  = { git = "https://gitlab.com/ColombaLink/dev/dapsi/public/dybli/core/deps/rust-multihash.git"}
 parking_lot = "0.12.0"
 thiserror = "1.0.25"
 
@@ -33,7 +33,7 @@ async-std = { version = "1.9.0", features = ["attributes"] }
 criterion = "0.3.4"
 proptest = "1.0.0"
 model = "0.1.2"
-multihash  = { git = "https://github.com/timoCasti/multihash.git"}
+multihash  = { git = "https://gitlab.com/ColombaLink/dev/dapsi/public/dybli/core/deps/rust-multihash.git"}
 
 [features]
 default = ["dag-cbor", "dag-json", "dag-pb", "derive","dag-git"]
