--- a/dag-git/Cargo.toml
+++ b/dag-git/Cargo.toml
@@ -12,7 +12,7 @@ anyhow = { version = "1.0.40", default-features = false }
 libipld-core = { version = "0.14.0", path = "../core" }
 prost = "0.11.0"
 thiserror = "1.0.25"
-multihash  = { git = "https://github.com/timoCasti/multihash.git"}
+multihash  = { git = "https://gitlab.com/ColombaLink/dev/dapsi/public/dybli/core/deps/rust-multihash.git"}
 
 
 [dev-dependencies]
